# intextum

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.example.yaml  docker-compose.override.yaml  docker-compose.yaml  ruff.toml
.github/workflows/: docker-images.yml  lint.yml  release-worker.yml
api/: Dockerfile  Dockerfile.dev  app_runtime.py  config.py  database.py  main.py  requirements-test.txt  rls.py  trustees.py
api/alembic/: env.py
api/auth/: dependencies.py  helpers.py  worker_auth.py
api/chat/: __init__.py  collector.py  context.py  enrichment.py  sources.py  state.py  transcript.py
api/models/: __init__.py  ai_settings.py  exports.py  general_settings.py  sqlalchemy_models.py  task_queue.py  vector.py  worker.py
api/research/: __init__.py  messages.py
api/routers/: __init__.py  auth.py  chat_prompt_presets.py  permissions.py  workers.py
api/scripts/: start-api.sh
api/services/: crypto.py  general_settings.py  group.py  processing_artifacts.py  research_reports.py  utils.py  vector.py  watcher.py
api/tests/: conftest.py  test_acl_service.py  test_ai_limits.py  test_ai_settings_service.py  test_alembic_baseline_layout.py  test_app_runtime.py  test_auth.py  (+50 more)
backend/: .dockerignore  Dockerfile  Dockerfile.dev  __init__.py  alembic.ini  app_http.py  clients.py  config.py  logging_config.py  mypy.ini  pytest.ini  requirements.txt  rls.py
docs/: README.md  architecture.md  content-enrichment.md  operations.md  research.md  security.md  worker-runtime.md
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
web/: .prettierignore  AGENTS.md  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json
worker/: .dockerignore  .ruff.toml  Dockerfile  Dockerfile.cuda  README.md  __init__.py  config.py  logging_config.py  main.py  models.py  mypy.ini  poll_enrichment.py  poll_loop.py  poll_runtime.py  processor_docling.py  processor_runtime.py  processors.py  pyproject.toml  runtime_info.py  version.py
worker/requirements/: README.md  asr.txt  base.txt  content-enrichment.txt  cpu-document.txt  cpu.txt  cuda.txt  document.txt  macos-mps.txt  test.txt
worker/scripts/: compile-requirements.sh  run-macos-mps.sh  setup-macos-mps.sh
worker/services/: api_client.py  api_client_uploads.py  backend_client.py  backend_client_api.py  backend_client_uploads.py  content_enrichment_training_runner.py  content_enrichment_utils.py  docling.py  docling_asr.py  docling_enrichment.py  docling_output.py  tokenizer.py  vector.py
worker/services/content_enrichment/: __init__.py  batching.py  chunk_selection.py  classification.py  evidence_grounding.py  json_response.py  langgraph_provider.py  merge.py  model_artifacts.py  orchestration.py  prompt.py  registry.py  repeated_fields.py
worker/src/intextum_worker/: main.py  poll_enrichment.py  poll_loop.py  poll_runtime.py  processor_docling.py  processor_runtime.py  processors.py  runtime_info.py  version.py
worker/src/intextum_worker/services/: api_client.py  api_client_uploads.py  content_enrichment_training_runner.py  content_enrichment_utils.py  docling.py  tokenizer.py  vector.py
worker/src/intextum_worker/services/content_enrichment/: batching.py  chunk_selection.py  classification.py  console.py  evidence_grounding.py  json_response.py  langgraph_provider.py  merge.py  model_artifacts.py  orchestration.py  prompt.py  registry.py  repeated_fields.py
worker/tests/: conftest.py  test_api_client.py  test_api_client_api.py  test_api_client_uploads.py  test_backend_client.py  test_backend_client_api.py  test_backend_client_uploads.py  test_config.py  test_content_enrichment.py  test_content_enrichment_training_runner.py  test_content_enrichment_utils.py  test_langgraph_extraction.py  test_logging.py  test_poll_runtime.py  test_processor_docling.py  test_processor_runtime.py  test_processors.py  test_requirements.py  test_runtime_info.py  test_services.py  test_tasks.py
(+574 files in other folders)
