[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intextum-worker"
description = "Intextum processing worker: HTTP-polling Docling/FFmpeg document, image and audio pipeline."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
authors = [{ name = "Sebastian Alberternst", email = "alberternst@gmail.com" }]
keywords = ["intextum", "docling", "ocr", "asr", "document-processing", "worker"]
dynamic = ["version"]

# Core runtime (mirrors requirements/base.txt). Feature stacks and the Torch
# build variant live in the optional-dependency extras below.
dependencies = [
    "requests>=2.33.0,<3.0.0",
    "pydantic-settings>=2.14.0,<3.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "Pillow>=10.0.0",
]

[project.scripts]
intextum-worker = "intextum_worker.main:main"

[project.urls]
Homepage = "https://github.com/intextum/intextum"
Repository = "https://github.com/intextum/intextum"

[project.optional-dependencies]
# Feature stacks (mirror requirements/{document,asr,content-enrichment}.txt).
document = [
    "docling>=2.8.0",
    "docling-core>=2.74.1",
    "easyocr~=1.7.1",
    "rapidocr-onnxruntime~=1.3.14",
    "onnxruntime~=1.17.1",
    "numpy<2",
]
asr = ["docling[asr]>=2.8.0"]
enrichment = [
    "transformers>=4.38.0",
    "gliner2>=0.1.0",
    "langgraph>=1.1.8",
    "sentencepiece",
    "protobuf",
    "numpy<2",
]
full = ["intextum-worker[document,asr,enrichment]"]

# Platform bundles add the right Torch build on top of a feature stack.
#   macOS (Apple MPS): wheels are on PyPI, so this installs with no extra index:
#       pip install 'intextum-worker[mps]'
#   Linux CPU / NVIDIA CUDA: the +cpu / +cu126 wheels live on the PyTorch index,
#   so the install command must add the matching --extra-index-url:
#       pip install 'intextum-worker[cpu]'  --extra-index-url https://download.pytorch.org/whl/cpu
#       pip install 'intextum-worker[cuda]' --extra-index-url https://download.pytorch.org/whl/cu126
mps = [
    "intextum-worker[full]",
    "torch==2.6.0 ; platform_system == 'Darwin'",
    "torchvision==0.21.0 ; platform_system == 'Darwin'",
]
cpu = [
    "intextum-worker[full]",
    "torch==2.6.0+cpu ; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "torchvision==0.21.0+cpu ; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "torch==2.6.0 ; platform_system == 'Linux' and platform_machine != 'x86_64'",
    "torchvision==0.21.0 ; platform_system == 'Linux' and platform_machine != 'x86_64'",
    "torch==2.6.0+cpu ; platform_system == 'Windows'",
    "torchvision==0.21.0+cpu ; platform_system == 'Windows'",
]
cpu-document = [
    "intextum-worker[document]",
    "torch==2.6.0+cpu ; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "torchvision==0.21.0+cpu ; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "torch==2.6.0 ; platform_system == 'Linux' and platform_machine != 'x86_64'",
    "torchvision==0.21.0 ; platform_system == 'Linux' and platform_machine != 'x86_64'",
    "torch==2.6.0+cpu ; platform_system == 'Windows'",
    "torchvision==0.21.0+cpu ; platform_system == 'Windows'",
]
cuda = [
    "intextum-worker[full]",
    "torch==2.6.0+cu126 ; platform_system == 'Linux'",
    "torchvision==0.21.0+cu126 ; platform_system == 'Linux'",
    "torch==2.6.0+cu126 ; platform_system == 'Windows'",
    "torchvision==0.21.0+cu126 ; platform_system == 'Windows'",
]
test = [
    "pytest>=9.0.3,<10.0",
    "pytest-asyncio>=1.4.0,<2.0.0",
]

[tool.setuptools.dynamic]
# Single source of truth: the repo-root VERSION file, staged into worker/ at
# build time (see .github/workflows/release-worker.yml and worker/Dockerfile).
version = { file = "VERSION" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
